--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         
         <meta content="text/html" charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+	<script src="https://unpkg.com/three@0.137.4/build/three.min.js"></script>
         
         <!-- CSS -->
 		<style>
